[project]
name = "mcp_server_fetch_with_micropayments"
version = "0.1.0"
description = "A Model Context Protocol server based on Anthropic's MCP fetch server with additional functionality to pay for content using cryptocurrency micropayments."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["http", "mcp", "llm", "automation"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "markdownify>=0.13.1",
    "mcp>=1.0.0",
    "protego>=0.3.1",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.1",
    "readabilipy>=0.2.0",
    "requests>=2.32.3",
]

[project.scripts]
mcp-server-fetch = "mcp_server_fetch_with_micropayments:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pyright>=1.1.389", "ruff>=0.7.3"]
